[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/SpritePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Physics/DetectBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/FrameTimer.tscn" type="PackedScene" id=4]

[node name="Projectile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SpritePlayer" parent="." instance=ExtResource( 1 )]

[node name="HitStopTimer" parent="." instance=ExtResource( 4 )]

[node name="ProjCollisionBox" parent="." instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0
color = Color( 1, 0.92549, 0.32549, 1 )

[connection signal="anim_finished" from="SpritePlayer" to="." method="_on_SpritePlayer_anim_finished"]
